<resources>

    <string name="app_name">Github User App</string>
    <string name="night_mode">Night Mode</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="name">Name</string>
    <string name="detail_user">Detail User</string>
    <string name="nick">\@%1$s</string>
    <string name="dot">●</string>
    <string name="follower">follower</string>
    <string name="following">following</string>
    <string name="iccompany">icCompany</string>
    <string name="iclocation">iclocation</string>
    <string name="icrepository">icrepository</string>
    <string name="share">Share</string>
    <string name="icback">icback</string>
    <string name="openurl">openUrl</string>
    <string name="error">Error!</string>
    <string name="score">Score: %s</string>
    <string name="intent_share_title">Github user %s</string>
    <string name="favorite">Favorite</string>
    <string name="back_twice_message">Please click BACK again to exit</string>
    <string name="api_limit_reached_message">API limit request reached!</string>
    <string name="unknown_error_message">Unknown Error!</string>
    <string name="info_title">Information</string>
    <string name="no_user_found_message">No users found with the username %s</string>

</resources>