<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailsActivity">

    <ImageButton
        android:id="@+id/btnFav"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="?actionBarSize"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_round_favorite_border_24"
        android:translationZ="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/icon_color"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
            app:expandedTitleTextAppearance="@style/ExpandedAppBar"
            app:contentScrim="@color/primary_color"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_color"
                app:layout_collapseMode="parallax">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:transitionName="@string/thumbnail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:textAlignment="center"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    android:transitionName="@string/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <ImageView
                    android:id="@+id/icPeople"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:contentDescription="@string/detail_user"
                    android:src="@drawable/ic_round_people_alt_24"
                    app:layout_constraintBottom_toBottomOf="@+id/followers"
                    app:layout_constraintEnd_toStartOf="@+id/followers"
                    app:layout_constraintTop_toTopOf="@id/followers"
                    app:tint="@color/icon_color"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/dotLabel"
                    app:layout_constraintEnd_toStartOf="@+id/followersLabel"
                    app:layout_constraintTop_toTopOf="@+id/dotLabel" />

                <TextView
                    android:id="@+id/followersLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:text="@string/follower"
                    app:layout_constraintBottom_toBottomOf="@+id/dotLabel"
                    app:layout_constraintEnd_toStartOf="@+id/dotLabel"
                    app:layout_constraintTop_toTopOf="@+id/dotLabel"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/dotLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:text="@string/dot"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/image"
                    app:layout_constraintStart_toStartOf="@+id/image"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/dotLabel"
                    app:layout_constraintStart_toEndOf="@+id/dotLabel"
                    app:layout_constraintTop_toTopOf="@+id/dotLabel"
                    />

                <TextView
                    android:id="@+id/followingLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:text="@string/following"
                    app:layout_constraintBottom_toBottomOf="@+id/dotLabel"
                    app:layout_constraintStart_toEndOf="@+id/following"
                    app:layout_constraintTop_toTopOf="@+id/dotLabel"
                    tools:ignore="TextContrastCheck" />


                <ImageView
                    android:id="@+id/iconCompany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:contentDescription="@string/iccompany"
                    android:src="@drawable/ic_baseline_business_24"
                    app:layout_constraintStart_toStartOf="@+id/icPeople"
                    app:layout_constraintTop_toBottomOf="@+id/icPeople"
                    app:tint="@color/icon_color"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/iconCompany"
                    app:layout_constraintStart_toEndOf="@+id/iconCompany"
                    app:layout_constraintTop_toTopOf="@+id/iconCompany" />


                <ImageView
                    android:id="@+id/iconLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:contentDescription="@string/iclocation"
                    android:src="@drawable/ic_round_location_on_24"
                    app:layout_constraintStart_toStartOf="@+id/iconCompany"
                    app:layout_constraintTop_toBottomOf="@+id/iconCompany"
                    app:tint="@color/icon_color"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/iconLocation"
                    app:layout_constraintStart_toEndOf="@+id/iconLocation"
                    app:layout_constraintTop_toTopOf="@+id/iconLocation" />

                <ImageView
                    android:id="@+id/iconRepository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:contentDescription="@string/icrepository"
                    android:src="@drawable/ic_baseline_menu_book_24"
                    app:layout_constraintStart_toStartOf="@+id/iconLocation"
                    app:layout_constraintTop_toBottomOf="@+id/iconLocation"
                    app:tint="@color/icon_color"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/iconRepository"
                    app:layout_constraintStart_toEndOf="@+id/iconRepository"
                    app:layout_constraintTop_toTopOf="@+id/iconRepository" />

                <Space
                    android:layout_height="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/iconRepository"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:popupTheme="@style/ThemeOverlay.AppCompat"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabSelectedTextColor="@color/icon_color"
            android:contentDescription="@string/follower"
            app:tabTextColor="@color/text_color"
            app:tabBackground="@color/background_color"
            app:tabIndicatorColor="@color/icon_color"
            app:layout_constraintTop_toBottomOf="@+id/iconRepository" />


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            android:layout_marginBottom="@dimen/_14sdp" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>