<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activity.HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/darkMode"
                android:layout_width="@dimen/_42sdp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_round_mode_night_24"
                app:layout_constraintEnd_toStartOf="@+id/fav"
                android:translationZ="120dp"
                android:contentDescription="@string/night_mode" />

            <ImageButton
                android:id="@+id/fav"
                android:layout_width="@dimen/_42sdp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_round_favorite_24"
                android:layout_marginEnd="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                android:translationZ="120dp"
                android:contentDescription="@string/favorite" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="?actionBarSize"
                android:theme="?actionBarTheme"
                app:title="@string/app_name"
                app:titleTextColor="@color/text_color" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:padding="@dimen/_10sdp"
        android:queryHint="Username" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/shimmer_item_adapter" />
                <include layout="@layout/shimmer_item_adapter" />
                <include layout="@layout/shimmer_item_adapter" />
                <include layout="@layout/shimmer_item_adapter" />
                <include layout="@layout/shimmer_item_adapter" />

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>